--- a/app/src/main/res/drawable/btn_login.xml
+++ b/app/src/main/res/drawable/btn_login.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/yellow">
+    android:color="@color/white">
     <item>
         <shape android:shape="rectangle">
-    <solid android:color="@color/colorAccent"/>
-    <stroke android:color="@color/colorAccent"/>
+    <solid android:color="@color/colorPrimary"/>
+    <stroke android:color="@color/colorPrimary"/>
     <corners android:radius="7dp"/>
         </shape>
     </item>
